# fastapi_helloworld_online

./: README.md  pyproject.toml
.pytest_cache/v/cache/: lastfailed  nodeids
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
fastapi_helloworld_online/: main.py
tests/: test_main.py
